Address pipeline productization review findings